Fixed refresh alignment problem on create

--- a/css/vs-admin.css
+++ b/css/vs-admin.css
@@ -444,6 +444,7 @@ DIV.field-container.currently-editing  INPUT
 }
 
 I.fa-refresh {
+    width: 33px;
     cursor: pointer;
     color: rgba(0,0,0,0.4);
     transition: transform 0.5s ease 0s;
